# mhws-obt-server

./: Cargo.toml  EAR-B-WW.json  PartyQosServers.json  README.md  analysis-languages.json  community-invitation-received_list.base64  consent-countries.json  consent-documents.json  consent-restrictions.json  delivery-data.base64  earth-analysis-obt.json  hunter-profile-update.base64  obt-wilds.crt  obt-wilds.key  system.json  token-refresh.json
.cargo/: config.toml
src/: error.rs  main.rs  strings.rs  ws.rs
src/route/: api.rs  hjm.rs  mod.rs  mtm.rs  playfabapi.rs  pubsub.rs  sync.rs
static/: PartyQosServers.json  analysis-languages.json  auth-ticket.base64  block-list.base64  consent-countries.json  consent-documents.json  earth-analysis-obt.json  follow-total_list.base64  obt-wilds.key  steam-sign.json  system.json  token-refresh.json
static/MultiplayerServer/: ListPartyQosServers
static/auth/: login
static/friend/: list
static/hunter/: sync
static/hunter/profile/: update
static/lobby/dummy/: touch
static/lobby/private/: create
static/v1/consent/countries/: zh-hans
static/v1/consent/documents/EAR-B-WW/CN/zh-hans/: over
static/v1/consent/restrictions/: CN
static/v1/projects/earth-analysis-obt/topics/: analysis-client-logpublish
