[package]
name = "mhws-obt-server"
version = "0.1.0"
edition = "2024"

[dependencies]
ntex = { version = "2.11.0", features = ["compio", "rustls", "ws"], default-features = false }
compio = { version = "0.13", features = ["runtime", "io-uring"] , default-features = false }
anyhow = "1"
rustls = { version = "0.23", features = ["std", "ring"], default-features = false }
clap = { version = "4", features = ["std", "cargo"], default-features = false }
futures = { version = "0.3", default-features = false }
base64 = { version = "0.22", default-features = false }
env_logger = { version = "0.11", features = ["auto-color", "humantime"], default-features = false }
log = "0.4"

[profile.release]
strip = true
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
